fix(select): added missing background color to solid fill

--- a/core/src/components/select/select.ionic.scss
+++ b/core/src/components/select/select.ionic.scss
@@ -227,6 +227,12 @@
 // States
 // ----------------------------------------------------------------
 
+// Fill types
+// ----------------------------------------------------------------
+:host(.select-fill-solid) {
+  --background: #{globals.$ion-primitives-neutral-200};
+}
+
 // Disabled
 // ---------------------------------------------
 
